# Version 0.2: The big Pydantic migration
This commit inaugurates the transition to sinn v0.2. It is a near 
complete rewrite of the entire stack, based on the lessons learned from 
v0.1. The because fundamental changes are:

  - Integration of `Pydantic <https://pydantic-docs.helpmanual.io>`_ 
throughout.
  - Extension of a few, dispersed axis functions into a coherent, 
full-featured axis & indexing module.
  - Consistent automatic compilation
  - Addition of unit tests
  - A documentation skeleton

## Integration of Pydantic

Every core object is now a Pydantic `BaseModel`. This has benefits in 
terms of specifying and validating intialization inputs, and allows a 
declarative specification of parameters. Declarative specifications are 
especially especially natural for `Model`, where composability and 
extensability are important features. The definition of model components 
(`History`, `Axis`, `Kernel`) as subclasses of `BaseModel` allows us to 
make full use of this composability.

However, the biggest advantages of using Pydantic are when embedding 
models within larger workflows. Pydantic objects can be easily 
(de)serialized, making it simple and reproducible to read/write 
parameter sets, model components or entire models to disk. Any special 
packing/unpacking code is within the object itself, allowing 
standardized codes for passing parameters and results between data 
processing stages.

## Axis module

The axis module was created to address a few issues:

  1. Sinn v0.1 defined different incompatible axis concepts, for 
manipulating time arrays (`History`, simulations) and rescaling, 
rebinning data (`AxisData`, Bayesian inference, data analysis).
  2. The time axis was fully enmeshed in the `History` class. It started 
as a simple second array, but grew into multiple specialized methods as 
needs arose.
  3. Conversions between time axes of different histories was 
unintuitive and error-prone.
  4. Being able to index a history by value instead of ind

--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,21 @@ debuglog*
 data
 TMPNOTES
 venv
+snippets
 tmp*
 *.log*
 *.cprof
 _build
+_autosummary
+*.coverage
 *.html
 *.cache
 *.compilecache
+*???final?.dat
+*???final?.dir
+  # Theano graph cache files
 activate
   # symbolic link to environment
+*.Rproj*
+.Rprofile
+.RData
