Update SCS example

--- a/examples/Random-RNN/random-rnn.yaml
+++ b/examples/Random-RNN/random-rnn.yaml
@@ -11,6 +11,8 @@ dependencies:
   - matplotlib
   - seaborn
   - pydantic
+  - python-blosc
+  - astunparse
   - theano=1.0.4
   # Theano version hard-coded because we download scan_perform.c by hand
   - tqdm
