[Random-RNN example] Theano version no longer needs to be pinned since v1.0.5

--- a/examples/Random-RNN/random-rnn.yaml
+++ b/examples/Random-RNN/random-rnn.yaml
@@ -13,8 +13,7 @@ dependencies:
   - pydantic
   - python-blosc
   - astunparse
-  - theano=1.0.4
-  # Theano version hard-coded because we download scan_perform.c by hand
+  - theano
   - tqdm
   # - sphinx
   - pip:
