Small updates & improvements. Upgrade to beta status. Use theano-pymc
Bump version to 0.2.0dev1
Switch from theano -> theano-pymc
  - theano-pymc is once again an active project
  - Rename RandomStreams -> RandomStream
  - Support both RandomState and MRG random streams
  - Use MRG_RandomStream by default
    + `size` is no longer an optional argument for distributions
      (a future theano_shim update may make it optional again)
More reliable deserialization of sparse arrays

--- a/dev-env_3-8.yaml
+++ b/dev-env_3-8.yaml
@@ -3,9 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.8  # We currently target 3.8
   - pydantic
   - numpy
-  - theano
+  # - theano
+  - theano-pymc
   - tqdm   # Planned to be moved to dev packages
   - packaging
   - pip
