Add missing dependencies to conda env files

--- a/dev-env_3-8.yaml
+++ b/dev-env_3-8.yaml
@@ -13,6 +13,8 @@ dependencies:
   - pip
   - pip:
     - odictliteral
+    - "theano_shim @ git+https://github.com/mackelab/theano_shim"
+    - "mackelab-toolbox[iotools,typing,theano,utils,parameters] @ git+https://github.com/mackelab/mackelab-toolbox"
 # Development packages
 # These are required either to run tests or examples, or build documentation
   - ipykernel
