--- a/dev-env_3-9.yaml
+++ b/dev-env_3-9.yaml
@@ -9,6 +9,7 @@ dependencies:
   # - theano
   - theano-pymc
   - tqdm   # Planned to be moved to dev packages
+  - tabulate
   - packaging
   - pip
   - pip:
